tests/correct/correto11.lua
function foo()  return   end
function bar(x) return x end

bar(foo())